--- a/portfolio.html
+++ b/portfolio.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Demo</title>
 </head>
 <body>
-    <section>
-        <h1>Alvaro Garcia</h1>
+    <h1 id="name">Alvaro A. Garcia</h1>
+    <section class="sect1">
 
-        <img src="/images/selfphoto.jpg" alt="photo">
+        <img src="images/selfphoto.jpg" alt="selfphoto.jpg">
 
-    <p>I am a philomath for software engineering. Started my journey with San Juan College but decided to study at
-     TrueCoders for a better education. Right now what Im studying is C#, SQL, DOM, ORM, and API's, to name a few.</p>
+    <p class="introP">I am a philomath for software. My first programming language was Java and I typed my code on a IDE
+        called Jgrasp. Ever since then I have become a nerd for code and everything related to it. One day I will be a
+        software developer working for a company where I can make a difference.
+    </p>
     </section>
 
-    <ul>
-        <li><a href="Tel: 505-278-4987"></a>505-278-4987</li>
-        <li><a href="mailto: agarcia11746@gmail.com">agarcia11746@gmail.com</a></li>
-    </ul>
-
-    <section>
-        <h1>education</h1>
-        <h2>San Juan College (Aug 2019 - Dec 2021)</h2>
+    <section class="sect2">
+        <h1>Education</h1>
+        <h3>San Juan College (Aug 2019 - Dec 2021)</h3>
         <p>In San Juan College this is where I first learned that coding is something I wanted to do.
          During the time I was there I learned Java, C++, IDE's, and got a certificate in CompTIA Network +.
         </p>
 
-        <h2>TrueCoders (Current)</h2>
+        <h3>TrueCoders (Current)</h3>
         <p>I am close to finishing this coding bootcamp and I have learned so much. During this course not only
             have I learned C# but I learned the core principals of OOP. I learned SQL and how to connect C# and SQL using
             Dapper. Now Im learning API's and web development.
         </p>
 
     </section>
+
+        <ul class="sect3">
+            <h1>Email</h1>
+            <li><a href="mailto: agarcia11746@gmail.com">agarcia11746@gmail.com</a></li>
+        </ul>
 </body>
 </html>
